<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ES File Manager</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="icon">icon</string>
    <string name="apps">App Manager</string>
    <string name="ftp">FTP Server</string>
    <string name="setting">Settings</string>
    <string name="select">Select Item</string>
    <string name="press_again">Press again to exit</string>
    <string name="open">Open</string>
    <string name="backup">Backup</string>
    <string name="uninstall">Uninstall</string>
    <string name="play">Play store</string>
    <string name="properties">Properties</string>
    <string name="copyingapk">"Copying APK to "</string>
    <string name="delbook">Delete Bookmark</string>
    <string name="add_to_bookmarks">Add to Bookmarks</string>
    <string name="enterpath">Enter Path</string>
    <string name="cancel">CANCEL</string>
    <string name="create">CREATE</string>
    <string name="loading">Loading&#8230;</string>
    <string name="file_empty">File is empty</string>
    <string name="error">Error</string>
    <string name="search_results">Search results of %s</string>
    <string name="rename">Rename</string>
    <string name="save">Save</string>
    <string name="bookmarks_added">Bookmarks Added</string>
    <string name="fileexist">File with same name already exists </string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="size_capitalized">Size</string>
    <string name="size">size of folder</string>
    <string name="enterzipname">Enter Zip Name</string>
    <string name="no_app_found">No App found to open this file</string>
    <string name="copying">Copying</string>
    <string name="moving">Moving</string>
    <string name="file">File</string>
    <string name="folder">Folder</string>
    <string name="newfolder">New Folder</string>
    <string name="entername">Enter Name</string>
    <string name="extracting">Extracting</string>
    <string name="stopping">Stopping</string>
    <string name="open_parent">Open Parent Directory</string>
    <string name="open_with">Open with</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="extract">Extract</string>
    <string name="compress">Compress</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_delete_category_directories">Directories</string>
    <string name="dialog_delete_category_files">Files</string>
    <string name="dialog_delete_disclaimer">Deleting the items below will permanently remove them from your device and they cannot be recovered.</string>
    <string name="dialog_delete_title">Delete items permanently?</string>
    <string name="deleting">Deleting</string>
    <string name="question_set_path_as_home">Do you want to set current path as home for this tab?</string>
    <string name="directorysort">Directory Sort Mode</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_only_this">Only this folder</string>
    <string name="theme">Theme</string>
    <string name="random">Random Skin</string>
    <string name="random_summary">Sets random primary color at startup</string>
    <string name="colorize">Colorize Icons</string>
    <string name="colorize_summary">Sets static icon color. Doesn\'t override directory icon color preference.</string>
    <string name="home">Home</string>
    <string name="paste">Paste</string>
    <string name="history">History</string>
    <string name="copy">Copy</string>
    <string name="root_mode">Root Explorer</string>
    <string name="root_mode_summary">For rooted device only. Check it only if you are sure about it.</string>
    <string name="root_failure">Root Access not granted</string>
    <string name="select_all">Select All</string>
    <string name="delete">Delete</string>
    <string name="set_as_home">Set As Home</string>
    <string name="light">Material Light</string>
    <string name="dark">Material Dark</string>
    <string name="daytime">Daytime</string>
    <string name="black">Black (for OLED)</string>
    <string name="foldersOnTop">Folders On Top</string>
    <string name="filesOnTop">Files On Top</string>
    <string name="none_on_top">None On Top</string>
    <string name="sort_name">Name</string>
    <string name="lastModified">Last Modified</string>
    <string name="sort_size">Size</string>
    <string name="pick_a_file">Pick a file</string>
    <string name="process_viewer">Process Viewer</string>
    <string name="in_safe">Insufficient space</string>
    <string name="no_file_overwrite">No File Overwritten</string>
    <string name="skip">Skip</string>
    <string name="overwrite">Overwrite</string>
    <string name="not_allowed">Not Allowed</string>
    <string name="searching">Searching %s</string>
    <string name="done">Done</string>
    <string name="set">Set</string>
    <string name="enablerootmde">Enable Root Mode</string>
    <string name="goback">Go Back</string>
    <string name="newfile">New File</string>
    <string name="no_files">No Files</string>
    <string name="empty_state_hint">Pull down to refresh</string>
    <string name="used">used space</string>
    <string name="used_by_others">used by others</string>
    <string name="free">free space</string>
    <string name="listview">List View</string>
    <string name="gridview">Grid View</string>
    <string name="permission">Permissions</string>
    <string name="hide">Hide</string>
    <string name="exit">Exit</string>
    <string name="doforall">Do for all items</string>
    <string name="gridcolumnno">Number of columns in grid view</string>
    <string name="set_random">Changes will take place after you restart the app</string>
    <string name="authors">Authors</string>
    <string name="changelog">Changelog</string>
    <string name="ok">OK</string>
    <string name="ui">Interface</string>
    <string name="general">General</string>
    <string name="thumb_summary">Show Thumbnails of apps and images</string>
    <string name="thumb">Show Thumbnails</string>
    <string name="hidden">Show Hidden Files and Folders</string>
    <string name="lastModifiedSummary">Show the date and time when the file was modified last time</string>
    <string name="lastModifiedPref">Show Last Modified Date and Time</string>
    <string name="size_pref_summary">Show size of files and number of items in folders</string>
    <string name="size_pref">Show Sizes</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="root_pref_summary">Show Permissions of Files and Folders</string>
    <string name="root_pref">Show Permissions</string>
    <string name="about_amaze_file_manager_label">About Amaze File Manager</string>
    <string name="version">Version</string>
    <string name="rate">Rate the app</string>
    <string name="feedback">Send Feedback</string>
    <string name="hiddenfiles">Hidden Files</string>
    <string name="type">Type</string>
    <string name="root_directory">Root</string>
    <string name="add_shortcut">Add Shortcut</string>
    <string name="unsaved_changes">Unsaved Changes</string>
    <string name="unsaved_changes_description">You have unsaved changes, do you want to save them before exiting?</string>
    <string name="saving">Saving</string>
    <string name="package_installer">Package Installer</string>
    <string name="view">View</string>
    <string name="install">Install</string>
    <string name="archive">Archive</string>
    <string name="archive_text">This is an archive. What action would you like to perform?</string>
    <string name="package_installer_text">This is a package installer. What action would you like to perform?</string>
    <string name="xda_title">XDA thread</string>
    <string name="xda_summary">Q&amp;A, Help &amp; Troubleshooting</string>
    <string name="circular_images">Use circular icons for images and videos</string>
    <string name="circular_icons">Use circular icons</string>
    <string name="back_title">Back navigation</string>
    <string name="back_summary">Enables custom back navigation at top of the list</string>
    <string name="details">Details</string>
    <string name="translators">Translators</string>
    <string name="german_translation_title">German</string>
    <string name="italian_translation_title">Italian</string>
    <string name="french_translation_title">French</string>
    <string name="russian_translation_title">Russian</string>
    <string name="spanish_translation_title">Spanish</string>
    <string name="basque_translation_title">Basque</string>
    <string name="chinese_translation_title">Chinese</string>
    <string name="serbian_translation_title">Serbian</string>
    <string name="turkish_translation_title">Turkish</string>
    <string name="ukrainian_translation_title">Ukrainian</string>
    <string name="portuguese_translation_title">Portuguese</string>
    <string name="polish_translation_title">Polish</string>
    <string name="korean_translation_title">Korean</string>
    <string name="greek_translation_title">Greek</string>
    <string name="dutch_translation_title">Dutch</string>
    <string name="romanian_translation_title">Romanian</string>
    <string name="vietnamese_translation_title">Vietnamese</string>
    <string name="japanese_translation_title">Japanese</string>
    <string name="tamil_translation_title">Tamil</string>
    <string name="zip_viewer">Zip Viewer</string>
    <string name="unin_system_apk">This is a system app, deleting it might lead to system un-stability.\nProceed?</string>
    <string name="warning">Warning</string>
    <string name="donate">Donate</string>
    <string name="archive_preferences">Archive Preferences</string>
    <string name="archive_extract_folder">Archive Extract Folder</string>
    <string name="zip_create_folder">Zip Create Folder</string>
    <string name="archive_summary">Archive files will be extracted to this folder. Default value is the directory in which archive is present.</string>
    <string name="zip_summary">New zip files will be created in this folder. Default value is the directory in which files are present.</string>
    <string name="open_as">Open As</string>
    <string name="text">Text</string>
    <string name="audio">Audio</string>
    <string name="player_close">Close player</string>
    <string name="player_lock">Lock controls</string>
    <string name="player_more">More options</string>
    <string name="player_previous">Previous video</string>
    <string name="player_next">Next video</string>
    <string name="player_rewind">Rewind 10 seconds</string>
    <string name="player_forward">Forward 10 seconds</string>
    <string name="player_play_pause">Play or pause</string>
    <string name="player_fullscreen">Toggle fullscreen</string>
    <string name="player_audio">Audio</string>
    <string name="player_subtitle">Subtitles</string>
    <string name="player_fit">Fit</string>
    <string name="player_unlock">Unlock controls</string>
    <string name="player_continue_title">Continue playback?</string>
    <string name="player_continue_message">Resume from %1$s?</string>
    <string name="player_continue">Continue</string>
    <string name="player_start_over">Start over</string>
    <string name="player_no_audio_tracks">No alternate audio tracks</string>
    <string name="player_no_subtitles">No subtitles found</string>
    <string name="player_choose_subtitle">Choose subtitle file</string>
    <string name="player_subtitle_off">Subtitles off</string>
    <string name="player_auto_next">Auto play next video</string>
    <string name="search_hint">Type to search&#8230;</string>
    <string name="close">Close</string>
</resources>