<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_view"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@drawable/search_view_shape"

    android:layout_margin="@dimen/search_view_margin"
    android:gravity="center_vertical"
    android:visibility="gone"
    android:elevation="8dp">

    <ImageButton
        android:id="@+id/img_view_back"
        android:layout_width="@dimen/touch_target"
        android:layout_height="@dimen/touch_target"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/goback"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp"
        android:padding="@dimen/icon_button_padding"
        android:tint="@color/search_icon"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/search_view_back_margin_left_right"
        android:layout_marginRight="@dimen/search_view_back_margin_left_right"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/search_edit_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/img_view_back"
        android:layout_toEndOf="@+id/img_view_back"
        android:hint="@string/search_hint"
        android:inputType="textAutoComplete"
        android:imeOptions="actionSearch"
        android:maxLines="1"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_toLeftOf="@+id/search_close_btn"
        android:layout_toStartOf="@+id/search_close_btn"
        android:theme="@style/appCompatLight"
        android:textColorHint="@color/search_hint_text"/>
    <ImageButton
        android:id="@+id/search_close_btn"
        android:layout_width="@dimen/touch_target"
        android:layout_height="@dimen/touch_target"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/close"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        app:srcCompat="@drawable/ic_close_black_24dp"
        android:padding="@dimen/icon_button_padding"
        android:tint="@color/search_icon"
        android:layout_marginLeft="@dimen/search_view_info_margin_left_right"
        android:layout_marginRight="@dimen/search_view_info_margin_left_right"/>
</RelativeLayout>
